hphp/hack/test/typecheck/reified_generics/wildcard_as_shape.php.exp
File "wildcard_as_shape.php", line 5, characters 8-44:
Invalid `as` expression hint (Typing[4195])
File "wildcard_as_shape.php", line 7, characters 12-12:
The `as` operator cannot be used with _ in a shape (use `mixed` instead)
File "wildcard_as_shape.php", line 6, characters 12-12:
The `as` operator cannot be used with _ in a shape (use `mixed` instead)
File "wildcard_as_shape.php", line 9, characters 8-44:
Invalid `as` expression hint (Typing[4195])
File "wildcard_as_shape.php", line 11, characters 12-12:
The `as` operator cannot be used with _ in a shape (use `mixed` instead)
File "wildcard_as_shape.php", line 13, characters 8-44:
Invalid `as` expression hint (Typing[4195])
File "wildcard_as_shape.php", line 14, characters 12-12:
The `as` operator cannot be used with _ in a shape (use `mixed` instead)
